--- a/Gyman/Gyman.PresentationLayer/Views/MainView.xaml
+++ b/Gyman/Gyman.PresentationLayer/Views/MainView.xaml
@@ -1,12 +1,16 @@
-﻿<Window x:Class="Gyman.PresentationLayer.MainWindow"
+﻿<Window x:Class="Gyman.PresentationLayer.Views.MainView"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:Gyman.PresentationLayer"
+        xmlns:local="clr-namespace:Gyman.PresentationLayer.Views"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="Gyman"
+        WindowStartupLocation="CenterScreen"
+        MinHeight="768"
+        MinWidth="1248"
+        SnapsToDevicePixels="True">
     <Grid>
-        
+        <TextBlock Text="Hello, World!"/>
     </Grid>
 </Window>
