--- a/Gyman/Gyman.PresentationLayer/App.xaml
+++ b/Gyman/Gyman.PresentationLayer/App.xaml
@@ -2,6 +2,8 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <Application.Resources>
+        <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter"/>
+
         <!-- TextBox Error Style -->
         <Style TargetType="TextBox" BasedOn="{StaticResource {x:Type TextBox}}">
             <Setter Property="FontSize" Value="16"/>
@@ -28,5 +30,48 @@
                 </Trigger>
             </Style.Triggers>
         </Style>
+
+        <!-- Navigation Item Template -->
+        <DataTemplate x:Key="NavigationItemTemplate">
+            <Button Content="{Binding DisplayMember}"
+                    Command="{Binding OpenDetailViewCommand}">
+                <Button.Template>
+                    <ControlTemplate TargetType="Button">
+                        <Grid>
+                            <ContentPresenter
+                                HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"
+                                VerticalAlignment="{TemplateBinding VerticalContentAlignment}"/>
+                        </Grid>
+                        <ControlTemplate.Triggers>
+                            <Trigger Property="IsMouseOver" Value="True">
+                                <Setter Property="Cursor" Value="Hand"/>
+                                <Setter Property="FontWeight" Value="Bold"/>
+                            </Trigger>
+                            <Trigger Property="IsPressed" Value="True">
+                                <Setter Property="FontWeight" Value="Normal"/>
+                            </Trigger>
+                        </ControlTemplate.Triggers>
+                    </ControlTemplate>
+                </Button.Template>
+            </Button>
+        </DataTemplate>
+
+        <!-- Navigation Item Container Style -->
+        <Style x:Key="NavigationItemContainerStyle" TargetType="ContentPresenter">
+            <Setter Property="HorizontalAlignment" Value="Left"/>
+        </Style>
+
+        <!-- Detail View Item Template -->
+        <DataTemplate x:Key="DetailViewItemTemplate">
+            <StackPanel Orientation="Horizontal">
+                <TextBlock Text="{Binding Title}"/>
+                <TextBlock Text="*"
+                           Visibility="{Binding HasChanges,
+                    Converter={StaticResource BooleanToVisibilityConverter}}"/>
+                <Button Content="x"
+                        VerticalContentAlignment="Top"
+                        Command="{Binding CloseDetailViewCommand}"/>
+            </StackPanel>
+        </DataTemplate>
     </Application.Resources>
 </Application>
