--- a/Gyman/Gyman.PresentationLayer/App.xaml
+++ b/Gyman/Gyman.PresentationLayer/App.xaml
@@ -1,8 +1,15 @@
 ﻿<Application x:Class="Gyman.PresentationLayer.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:v="clr-namespace:Gyman.PresentationLayer.Views"
+             xmlns:vm="clr-namespace:Gyman.PresentationLayer.ViewModels">
     <Application.Resources>
         <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter"/>
+
+        <!-- Member Detail View Template -->
+        <DataTemplate DataType="{x:Type vm:MemberDetailViewModel}">
+            <v:MemberDetailView/>
+        </DataTemplate>
 
         <!-- TextBox Error Style -->
         <Style TargetType="TextBox" BasedOn="{StaticResource {x:Type TextBox}}">
