--- a/Gyman/Gyman.PresentationLayer/Views/NavigationView.xaml
+++ b/Gyman/Gyman.PresentationLayer/Views/NavigationView.xaml
@@ -4,6 +4,7 @@
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
 
         <GroupBox Grid.Row="0"
@@ -11,6 +12,14 @@
                   ScrollViewer.HorizontalScrollBarVisibility="Auto"
                   ScrollViewer.VerticalScrollBarVisibility="Auto">
             <ItemsControl ItemsSource="{Binding Members}"
+                          ItemTemplate="{StaticResource NavigationItemTemplate}"
+                          ItemContainerStyle="{StaticResource NavigationItemContainerStyle}"/>
+        </GroupBox>
+        <GroupBox Grid.Row="1"
+                  Header="Trainers"
+                  ScrollViewer.HorizontalScrollBarVisibility="Auto"
+                  ScrollViewer.VerticalScrollBarVisibility="Auto">
+            <ItemsControl ItemsSource="{Binding Trainers}"
                           ItemTemplate="{StaticResource NavigationItemTemplate}"
                           ItemContainerStyle="{StaticResource NavigationItemContainerStyle}"/>
         </GroupBox>
