--- a/Gyman/Gyman.PresentationLayer/Views/TrainerDetailView.xaml
+++ b/Gyman/Gyman.PresentationLayer/Views/TrainerDetailView.xaml
@@ -13,21 +13,37 @@
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
 
-        <Label Grid.Column="0" Grid.Row="0"
-               Content="Name"/>
-        <TextBox Grid.Column="0" Grid.Row="1"
-                 Text="{Binding Trainer.Name, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
+        <Label Grid.Column="0"
+               Grid.Row="0"
+               Content="Name"
+               Margin="10 0"/>
+        <TextBox Grid.Column="0"
+                 Grid.Row="1"
+                 Text="{Binding Trainer.Name, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                 Margin="10 0 10 10"/>
 
-        <Label Grid.Column="1" Grid.Row="0"
-               Content="Surname"/>
-        <TextBox Grid.Column="1" Grid.Row="1"
-                 Text="{Binding Trainer.Surname, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
+        <Label Grid.Column="1"
+               Grid.Row="0"
+               Content="Surname"
+               Margin="10 0"/>
+        <TextBox Grid.Column="1"
+                 Grid.Row="1"
+                 Text="{Binding Trainer.Surname, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                 Margin="10 0 10 10"/>
 
-        <StackPanel Grid.Column="1" Grid.Row="3"
+        <StackPanel Grid.Column="0"
+                    Grid.ColumnSpan="2"
+                    Grid.Row="3"
                     Orientation="Horizontal"
-                    HorizontalAlignment="Right">
-            <Button Content="Save" Command="{Binding SaveCommand}"/>
-            <Button Content="Delete" Command="{Binding DeleteCommand}"/>
+                    HorizontalAlignment="Right"
+                    Margin="10">
+            <Button Content="Save"
+                    Command="{Binding SaveCommand}"
+                    Width="125"
+                    Margin="0 0 10 0"/>
+            <Button Content="Delete"
+                    Command="{Binding DeleteCommand}"
+                    Width="125"/>
         </StackPanel>
     </Grid>
 </UserControl>
