--- a/Gyman/Gyman.PresentationLayer/Views/MemberDetailView.xaml
+++ b/Gyman/Gyman.PresentationLayer/Views/MemberDetailView.xaml
@@ -21,7 +21,7 @@
 
         <Label Grid.Column="0"
                Grid.Row="0"
-               Content="Name"
+               Content="Имя"
                Margin="10 0"/>
         <TextBox Grid.Column="0"
                  Grid.Row="1"
@@ -30,7 +30,7 @@
 
         <Label Grid.Column="1"
                Grid.Row="0"
-               Content="Surname"
+               Content="Фамилия"
                Margin="10 0"/>
         <TextBox Grid.Column="1"
                  Grid.Row="1"
@@ -39,7 +39,7 @@
 
         <Label Grid.Column="0"
                Grid.Row="2"
-               Content="Height"
+               Content="Рост"
                Margin="10 0"/>
         <TextBox Grid.Column="0"
                  Grid.Row="3"
@@ -53,7 +53,7 @@
 
         <Label Grid.Column="1"
                Grid.Row="2"
-               Content="Weight"
+               Content="Вес"
                Margin="10 0"/>
         <TextBox Grid.Column="1"
                  Grid.Row="3"
@@ -62,7 +62,7 @@
 
         <Label Grid.Column="0"
                Grid.Row="4"
-               Content="Age"
+               Content="Возраст"
                Margin="10 0"/>
         <TextBox Grid.Column="0"
                  Grid.Row="5"
@@ -71,7 +71,7 @@
 
         <Label Grid.Column="1"
                Grid.Row="4"
-               Content="Subscription"
+               Content="Абонемент"
                Margin="10 0"/>
         <ComboBox Grid.Column="1" Grid.Row="5"
                   ItemsSource="{Binding Subscriptions}"
@@ -82,7 +82,7 @@
 
         <Label Grid.Column="0"
                Grid.Row="6"
-               Content="Email"
+               Content="Электронная почта"
                Margin="10 0"/>
         <TextBox Grid.Column="0"
                  Grid.Row="7"
@@ -91,7 +91,7 @@
 
         <Label Grid.Column="1"
                Grid.Row="6"
-               Content="Phone"
+               Content="Телефон"
                Margin="10 0"/>
         <TextBox Grid.Column="1"
                  Grid.Row="7"
@@ -104,11 +104,11 @@
                     Orientation="Horizontal"
                     HorizontalAlignment="Right"
                     Margin="10">
-            <Button Content="Save"
+            <Button Content="Сохранить"
                     Command="{Binding SaveCommand}"
                     Width="125"
                     Margin="0 0 10 0"/>
-            <Button Content="Delete"
+            <Button Content="Удалить"
                     Command="{Binding DeleteCommand}"
                     Width="125"/>
         </StackPanel>
