--- a/Gyman/Gyman.PresentationLayer/Views/TrainerDetailView.xaml
+++ b/Gyman/Gyman.PresentationLayer/Views/TrainerDetailView.xaml
@@ -15,7 +15,7 @@
 
         <Label Grid.Column="0"
                Grid.Row="0"
-               Content="Name"
+               Content="Имя"
                Margin="10 0"/>
         <TextBox Grid.Column="0"
                  Grid.Row="1"
@@ -24,7 +24,7 @@
 
         <Label Grid.Column="1"
                Grid.Row="0"
-               Content="Surname"
+               Content="Фамилия"
                Margin="10 0"/>
         <TextBox Grid.Column="1"
                  Grid.Row="1"
@@ -37,11 +37,11 @@
                     Orientation="Horizontal"
                     HorizontalAlignment="Right"
                     Margin="10">
-            <Button Content="Save"
+            <Button Content="Сохранить"
                     Command="{Binding SaveCommand}"
                     Width="125"
                     Margin="0 0 10 0"/>
-            <Button Content="Delete"
+            <Button Content="Удалить"
                     Command="{Binding DeleteCommand}"
                     Width="125"/>
         </StackPanel>
