--- a/Gyman/Gyman.PresentationLayer/Views/TrainerDetailView.xaml
+++ b/Gyman/Gyman.PresentationLayer/Views/TrainerDetailView.xaml
@@ -9,6 +9,8 @@
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
             <RowDefinition />
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
@@ -31,9 +33,18 @@
                  Text="{Binding Trainer.Surname, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
                  Margin="10 0 10 10"/>
 
+        <Label Grid.Column="0"
+               Grid.Row="2"
+               Content="Телефон"
+               Margin="10 0"/>
+        <TextBox Grid.Column="0"
+                 Grid.Row="3"
+                 Text="{Binding Member.Phone, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                 Margin="10 0 10 10"/>
+
         <StackPanel Grid.Column="0"
                     Grid.ColumnSpan="2"
-                    Grid.Row="3"
+                    Grid.Row="5"
                     Orientation="Horizontal"
                     HorizontalAlignment="Right"
                     Margin="10">
